--- a/src/ui-kit/header/header.css
+++ b/src/ui-kit/header/header.css
@@ -1,11 +1,6 @@
-@import 'variables';
-@import '~uswds/src/stylesheets/all';
-
-$header-box-shadow: rgba(1, 2, 2, 0.1);
-
 header {
-  background-color: $color-primary-darkest;
-  box-shadow: 0 2px 4px $header-box-shadow;
+  background-color: #112e51;
+  box-shadow: 0 2px 4px rgba(1, 2, 2, 0.1);
   padding: 3px 0;
   text-align: center;
   height: 81px;
