--- a/src/app/assistance-listing/assistance-listing.page.html
+++ b/src/app/assistance-listing/assistance-listing.page.html
@@ -523,7 +523,7 @@
 
         <h3 class="m_B-5x">Headquarters Office:</h3>
 
-        <div *ngFor="let item of oProgram.data.contacts?.list">
+        <div *ngFor="let item of program.data.contacts?.list">
           <samPOC [data]="item"></samPOC>
         </div>
         <strong>Website: </strong>
