wip... still with broken images and fonts

--- a/src/ui-kit/footer/footer.scss
+++ b/src/ui-kit/footer/footer.scss
@@ -47,7 +47,8 @@
     display: inline-block;
     min-height: 10rem;
     min-width: 10rem;
-    @include background-image(url('/src/assets/img/logos/gsa-reverse.svg'), url('/src/assets/img/logos/gsa-reverse.png'));
+    //@include background-image(url('../../assets/img/logos/gsa-reverse.svg'), url('../../assets/img/logos/gsa-reverse.png'));
+    background-image: url('../../assets/img/logos/gsa-reverse.png');
     background-size: 10rem auto;
     background-repeat: no-repeat;
   }
