--- a/src/app/Help/sections/overview/overview.template.html
+++ b/src/app/Help/sections/overview/overview.template.html
@@ -1,22 +1,22 @@
 <section>
   <h2 class="m_T-2x">Welcome to the SAM.gov Help Center!</h2>
   <div class="usa-grid-full">
-    <p class="p_L-6x">
+    <p class="p_L-8x">
       Lorem ipsum dolor sit amet, vix dolor pericula conceptam at, qui delenit suavitate voluptatibus in,
       graece diceret lobortis vim ei.
     </p>
 
-    <h3>Online Help Navigation</h3>
-    <p class="p_L-6x">
+    <h3 class="p_L-3x">Online Help Navigation</h3>
+    <p class="p_L-8x">
       Omnes inermis ius at, ad assum constituto referrentur eam. Regione
       deserunt no vis, in his sale aeque. Saepe virtute impedit no nec, elitr decore antiopam cu usu, sit
       mandamus splendide comprehensam te.
     </p>
 
-    <h3>External Help</h3>
-    <h4 class="p_L-6x m_B-2x">Federal Service Desk</h4>
+    <h3 class="p_L-3x">External Help</h3>
+    <h4 class="p_L-8x m_B-2x">Federal Service Desk</h4>
     <div class="usa-width-one-whole m_B-3x">
-      <div class="usa-width-one-fourth p_L-6x">
+      <div class="usa-width-one-fourth p_L-8x">
           <a><img src="../assets/img/blank_icon.png"></a>
       </div>
       <div class="usa-width-three-fourths">
@@ -26,9 +26,9 @@
         </p>
       </div>
     </div>
-    <h4 class="p_L-6x m_B-2x">Interact</h4>
+    <h4 class="p_L-8x m_B-2x">Interact</h4>
     <div class="usa-width-one-whole">
-      <div class="usa-width-one-fourth p_L-6x">
+      <div class="usa-width-one-fourth p_L-8x">
         <a><img src="../assets/img/blank_icon.png"></a>
       </div>
       <div class="usa-width-three-fourths">
