--- a/src/app/Help/sections/about-sam/about-sam.template.html
+++ b/src/app/Help/sections/about-sam/about-sam.template.html
@@ -1,43 +1,22 @@
-<section style=" height:60vh;overflow: auto;">
+<section>
   <h2 class="m_T-2x">About SAM.gov</h2>
-  <h3 id="whoWeAre" class="p_L-2x">Who we are</h3>
-  <div class="usa-grid-full">
-    <p class="p_L-6x">
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
-      Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
-      per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
-      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
 
+  <div class="usa-grid-full">
+    <h3 id="whoWeAre" class="p_L-3x">Who we are</h3>
+    <p class="p_L-8x">
+      Ad verterem scripserit pro, falli apeirian ad est, vis
+      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
+      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
+      fuisset convenire an.
     </p>
   </div>
-  <h3 id="alerts" class="p_L-2x">System Alerts</h3>
+
   <div class="usa-grid-full">
-    <p class="p_L-6x">
+    <h3 id="alerts" class="p_L-3x">System Alerts</h3>
+    <p class="p_L-8x">
       Albucius lobortis ius et, sea debet inimicus ne,
       nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
-      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
-      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
-      fuisset convenire an.
+      ne corpora vivendum.
     </p>
   </div>
 </section>
