--- a/src/app/Help/sections/accounts/accounts.template.html
+++ b/src/app/Help/sections/accounts/accounts.template.html
@@ -1,9 +1,20 @@
 <section>
   <h2 class="m_T-2x">About SAM.gov</h2>
   <div class="usa-grid-full">
-    <p class="p_L-6x">
+    <h3 id="resetPwd" class="p_L-3x">Reset Password</h3>
+    <p class="p_L-8x">
       Lorem ipsum dolor sit amet, an quo elitr singulis, cu assum simul persius eos,
       per omittam concludaturque no. Albucius lobortis ius et, sea debet inimicus ne,
+      nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
+      ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
+      deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
+      fuisset convenire an.
+    </p>
+  </div>
+  <div class="usa-grid-full">
+    <h3 id="other" class="p_L-3x">Other</h3>
+    <p class="p_L-8x">
+      Albucius lobortis ius et, sea debet inimicus ne,
       nec accusam iudicabit cu. Ad verterem scripserit pro, falli apeirian ad est, vis
       ne corpora vivendum. Cu nihil exerci principes vis, et eos doctus malorum
       deterruisset. Id labores vivendum vim. Vitae aliquip mnesarchum mel ut, sit etiam
