--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -1,4 +1,4 @@
-@import '~uswds/src/stylesheets/lib/bourbon';
+@import 'node_modules/uswds/src/stylesheets/lib/bourbon';
 
 // Typography
 $em-base:             10px;
