--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -82,3 +82,149 @@ html, body{
   display: block;
   margin: 3px 0px 3px 0px;
 }
+
+select[multiple]{
+  background-image:none;
+  border-right-width:2px;
+}
+
+.autocomplete{
+  position:absolute;
+  top:44px;
+  background:#fff;
+  padding:0px 10px;
+  margin-top:0;
+  border:1px solid #000;
+  border-top:none;
+  width: 100%;
+}
+.autocomplete li{
+  list-style:none;
+  margin:5px 0;
+  max-width:inherit;
+}
+
+.autocomplete li:hover{
+  cursor:pointer;
+  background:#ccc;
+}
+
+.agency-picker-chevron-wrapper{
+  text-align:center;
+  padding-top: 30px
+}
+.agency-picker-chevron{
+
+  font-size:30px;
+}
+.agency-picker-chevron:hover{
+  cursor:pointer;
+}
+
+.agency-picker-dropdown-area{
+  padding-top:15px;
+  border:1px #000 solid;
+  position:relative;
+  margin-top:5px;
+}
+.agency-picker-icon{
+  font-size:1.5em;
+}
+.agency-picker-icon:hover{
+  cursor:pointer;
+}
+
+$usa-btn-small-width:   4.5rem;
+$usa-btn-medium-width:  8.5rem;
+$usa-btn-big-width:     4.5rem;
+
+
+
+.usa-agency-picker {
+  @include clearfix;
+  max-width: none;
+  position: relative;
+
+  .usa-agency-picker-input {
+    @include padding(0 null);
+    -webkit-appearance: none;
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
+    box-sizing: border-box;
+    float: left;
+    font-size: $small-font-size;
+    height: 3.3rem;
+    margin: 0;
+    width: calc(100% - #{$usa-btn-small-width});
+
+    @include media($small-screen) {
+      width: calc(100% - #{$usa-btn-medium-width});
+    }
+  }
+
+  [type="submit"],
+  .usa-agency-picker-submit {
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 0;
+    height: 3.3rem;
+    margin: 0;
+    padding: 0;
+    width: $usa-btn-small-width;
+
+    @include media($small-screen) {
+      background-image: none;
+      width: $usa-btn-medium-width;
+    }
+  }
+  .usa-agency-picker-icon-area{
+    float:left;
+    text-align:center;
+    height: 4.4rem;
+    width: #{$usa-btn-big-width};
+    align-items:flex-start;
+  }
+  .usa-agency-picker-submit-text {
+    display: none;
+    line-height:4.4rem;
+
+    @include media($small-screen) {
+      display: block;
+    }
+  }
+
+  &.usa-agency-picker-big {
+    @include media($small-screen) {
+      $height: 4.4rem;
+      $width: $usa-btn-big-width;
+
+      .usa-agency-picker-input {
+        font-size: $base-font-size;
+        height: $height;
+        width: calc(100% - #{$width});
+      }
+
+      [type="submit"],
+      .usa-agency-picker-submit {
+        font-size: $h3-font-size;
+        height: $height;
+        width: $width;
+      }
+    }
+  }
+
+  &.usa-agency-picker-small {
+    @include media($small-screen) {
+      $width: $usa-btn-small-width;
+
+      .usa-agency-picker-input {
+        width: calc(100% - #{$width});
+      }
+
+      [type="submit"],
+      .usa-agency-picker-submit {
+        @include search-icon;
+        width: $width;
+      }
+    }
+  }
+}
