--- a/src/app/Help/help.style.css
+++ b/src/app/Help/help.style.css
@@ -5,9 +5,9 @@
   border-radius: .3rem;
 }
 
-.help-content{
-  padding: 3px 0;
-
+.help-title{
+  width: 100%;
+  margin:0;
+  max-width: 2000px;
 }
-
 
