--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -193,3 +193,10 @@
   </div>
 </div>
 
+<div class="usa-grid">
+	<select>
+		<option>option1</option>
+		<option>option2</option>
+	</select>
+</div>
+
