--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -46,20 +46,20 @@
       <p *ngIf="opportunity.postedDate">
         <strong>Posted Date: </strong>{{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
       </p>
-      <p *ngIf="originalOpportunity && originalOpportunity.postedDate">
+      <p *ngIf="originalOpportunity?.postedDate">
         <strong>Original Posted Date: </strong>{{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
       </p>
       <p *ngIf="opportunity.data?.solicitation?.deadlines?.response">
         <strong>Response Date: </strong>{{ opportunity.data.solicitation.deadlines.response | dateFormat: 'MMM DD, YYYY' }}
       </p>
-      <p *ngIf="originalOpportunity && originalOpportunity.data?.solicitation?.deadlines?.response">
+      <p *ngIf="originalOpportunity?.data?.solicitation?.deadlines?.response">
         <strong>Original Response Date: </strong>{{ originalOpportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY' }}
       </p>
       <p><strong>Archiving Policy: </strong>{{ opportunity.data?.archive?.type }}</p>
       <p *ngIf="opportunity.data?.archive?.date">
         <strong>Archive Date: </strong>{{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
       </p>
-      <p *ngIf="originalOpportunity && originalOpportunity.data?.archive?.date">
+      <p *ngIf="originalOpportunity?.data?.archive?.date">
         <strong>Original Archive Date: </strong>{{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
       </p>
      </section>
