Call the alerts service to get alerts in the alerts header.
Moved the alerts-header component to the app.component so that it appears on all pages

--- a/src/app/app.template.html
+++ b/src/app/app.template.html
@@ -1,4 +1,5 @@
 <!-- includes HTML for app component-->
+<alertHeader></alertHeader>
 <samBanner #banner *ngIf="!isHeaderWithSearch"></samBanner>
 <div [style.padding-top]="isHeaderWithSearch ? '' : '24px'">
   <samSearchHeader *ngIf="isHeaderWithSearch" (searchHeaderDropdownControl)="toggleOverlay($event)" (searchEvent)="onHeaderSearchEvent($event)" [keyword]="keyword" [filterValue]="index"></samSearchHeader>
