--- a/src/app/opportunity/opportunity.page.html
+++ b/src/app/opportunity/opportunity.page.html
@@ -44,23 +44,30 @@
 
       <p><strong>Notice Type: </strong>{{ opportunity.data?.type }}</p>
       <p *ngIf="opportunity.postedDate">
-        <strong>Posted Date: </strong>{{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Posted Date: </strong>{{ opportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
       <p *ngIf="originalOpportunity?.postedDate">
-        <strong>Original Posted Date: </strong>{{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Original Posted Date: </strong>{{ originalOpportunity.postedDate | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
       <p *ngIf="opportunity.data?.solicitation?.deadlines?.response">
-        <strong>Response Date: </strong>{{ opportunity.data.solicitation.deadlines.response | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Response Date: </strong>{{ opportunity.data.solicitation.deadlines.response | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
       <p *ngIf="originalOpportunity?.data?.solicitation?.deadlines?.response">
-        <strong>Original Response Date: </strong>{{ originalOpportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Original Response Date: </strong>{{ originalOpportunity.data?.solicitation?.deadlines?.response | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
-      <p><strong>Archiving Policy: </strong>{{ opportunity.data?.archive?.type }}</p>
+
+      <p><strong>Archiving Policy: </strong>
+        <ng-container [ngSwitch]="opportunity.data?.archive?.type">
+          <ng-container *ngSwitchCase="'manual'">Manual Archive</ng-container>
+          <ng-container *ngSwitchCase="'autocustom'">Automatic on {{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}</ng-container>
+        </ng-container>
+      </p>
+
       <p *ngIf="opportunity.data?.archive?.date">
-        <strong>Archive Date: </strong>{{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Archive Date: </strong>{{ opportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
       <p *ngIf="originalOpportunity?.data?.archive?.date">
-        <strong>Original Archive Date: </strong>{{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY' }}
+        <strong>Original Archive Date: </strong>{{ originalOpportunity.data?.archive?.date | dateFormat: 'MMM DD, YYYY h:mm a UTC Z' }}
       </p>
      </section>
   </div>
