--- a/src/app/search/search.template.html
+++ b/src/app/search/search.template.html
@@ -6,7 +6,7 @@
     <samSearchbar (onSearch)="onSearchClick($event)" [keyword]="keyword" [placeholder]="'#keyword'" *ngIf="false"></samSearchbar>
     <div *ngIf="showOptional" class="usa-width-one">
       <h3>Common Filters:</h3>
-      <fh-input #fhInput [multimode]="true" (organization)="onOrganizationChange($event)"></fh-input>
+      <agency-picker #fhInput [multimode]="false" (organization)="onOrganizationChange($event)"></agency-picker>
       <hr *ngIf="data.results" class="m_T-5x"/>
     </div>
 		<div *ngFor="let row of data.results">
