--- a/src/app/app.style.scss
+++ b/src/app/app.style.scss
@@ -94,7 +94,7 @@ select[multiple]{
   background:#fff;
   padding:0px 10px;
   margin-top:0;
-  border:1px solid #000;
+  border:1px solid #5b616b;
   border-top:none;
   width: 100%;
 }
@@ -107,6 +107,9 @@ select[multiple]{
 .autocomplete li:hover{
   cursor:pointer;
   background:#ccc;
+}
+.autocomplete-selected{
+  background:#ccc; 
 }
 
 .agency-picker-chevron-wrapper{
@@ -123,7 +126,7 @@ select[multiple]{
 
 .agency-picker-dropdown-area{
   padding-top:15px;
-  border:1px #000 solid;
+  border:1px #5b616b solid;
   position:relative;
   margin-top:5px;
 }
