--- a/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
+++ b/src/app/application-content/ui-kit-demo/ui-kit-demo.template.html
@@ -193,3 +193,11 @@
   </div>
 </div>
 
+<div class="usa-grid">
+  <div class="usa-width-one-whole">
+    <h2>Alert Component &lt;samAlert&gt;</h2>
+
+    <agency-picker #eh1 [multimode]="true"></agency-picker>
+    <agency-picker #eh1 [multimode]="false"></agency-picker>
+  </div>
+</div>
