--- a/src/app/organization/organization.style.css
+++ b/src/app/organization/organization.style.css
@@ -3,18 +3,19 @@
   -webkit-font-smoothing: antialiased;
 }
 
-h1,h2{
+/*h1,h2{
   letter-spacing: -0.5px;
   line-height: 1.1;
   color: black;
 }
 
-h1{
-  margin-top: 50px !important;
-}
-
 p{
   opacity: 0.8;
+}*/
+
+h1{
+  margin-top: 50px !important;
+  line-height: 1.1;
 }
 
 .divider{
